--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
   sdk: '>=2.15.1 <3.0.0'
 
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  js: 0.6.3
 
 dev_dependencies:
   lints: ^1.0.0
