--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: web_hid
 description: A starting point for Dart libraries or applications.
-version: 1.0.0
-# homepage: https://www.example.com
+version: 0.1.0
+homepage: https://github.com/woodemi/web_hid.dart
 
 environment:
   sdk: '>=2.15.1 <3.0.0'
 
 
 dependencies:
-  js: 0.6.3
+  js: ^0.6.3
 
 dev_dependencies:
   lints: ^1.0.0
