--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-.vscode/
+# .vscode/
 
 # Files and directories created by pub.
 .dart_tool/
